--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -50,13 +50,85 @@
 .gpt1__navbar-sign button,
 .gpt1__navbar-menu-container button {
     padding: 1rem 2rem;
-    color:#FFF;
+    color: #FFF;
     font-family: var(--font-family);
     font-size: 18px;
-    line-height:25px;
+    line-height: 25px;
     font-weight: 500;
     background: #FF4820;
     border-radius: 5px;
     outline: none;
     cursor: pointer;
+}
+
+.gpt1__navbar-menu {
+    margin-left: 1rem;
+    display: none;
+    position: relative;
+}
+
+.gpt1__navbar-menu svg {
+    cursor: pointer
+}
+
+.gpt1__navbar-menu-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    text-align: end;
+    background: var(--color-footer);
+    padding: 2rem;
+    position: absolute;
+    top: 40px;
+    margin-top: 1rem;
+    min-width: 210px;
+    border-radius: 5px;
+    box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+
+
+}
+
+.gpt1__navbar-menu-container p {
+    margin: 1rem;
+}
+
+.gpt1__navbar-menu-container-links-sign {
+    display: none;
+}
+
+@media screen and (max-width:1050px) {
+    .gpt1__navbar-links-container {
+        display: none;
+    }
+
+    .gpt1__navbar-menu {
+        display: flex
+    }
+}
+
+@media screen and (max-width:700px) {
+    .gpt1__navbar {
+        padding: 2rem 4rem
+    }
+
+}
+
+@media screen and (max-width:500px) {
+    .gpt1__navbar {
+        padding: 2rem 4rem
+    }
+
+    .gpt1__navbar-sign {
+        display: none;
+    }
+
+    .gpt1__navbar-menu-container {
+        top: 20px;
+    }
+
+    .gpt1__navbar-menu-container-links-sign {
+        display: block;
+    }
+
 }
